--- a/CSS/inicio.css
+++ b/CSS/inicio.css
@@ -258,6 +258,7 @@ button:hover {
 
 .textFrontDev p {
     font-size: large;
+    font-size: 23px;
 }
 
 /*------------------------------------*/
@@ -287,7 +288,11 @@ button:hover {
     padding: 1% 5% 1%;
 }
 
-
+.imageFormatSkillBack p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .backgroundImageSkillsBack {
     display: flex;
@@ -300,12 +305,21 @@ button:hover {
 
 .textBackDev p {
     font-size: large;
+    font-size: 23px;
+}
+
+.moreInformation{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 2%;
 }
 
 @media screen and (max-width: 1275px) {
     .backgroundFrontBackDev {
         flex-direction: column;
-        /* Cambia la dirección de los elementos a columna */
     }
 
     .backgroundImageSkillsFront {
@@ -327,7 +341,7 @@ button:hover {
     }
 
     .mensaje {
-        padding: 10px 10px 30px;
+        padding: 5px 10px 20px;
     }
 
 }
