--- a/CSS/inicio.css
+++ b/CSS/inicio.css
@@ -245,7 +245,7 @@ button:hover {
     padding: 1% 5% 1%;
 }
 
-.imageFormatSkillFront{
+.imageFormatSkillFront {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -265,7 +265,7 @@ button:hover {
     width: 100%;
 }
 
-.backgroundImageSkillsFront p{
+.backgroundImageSkillsFront p {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -297,7 +297,7 @@ button:hover {
     margin: 1% 5% 1%;
 }
 
-.imageFormatSkillBack{
+.imageFormatSkillBack {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -339,7 +339,7 @@ button:hover {
     font-size: 23px;
 }
 
-.moreInformation{
+.moreInformation {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -419,7 +419,7 @@ button:hover {
     margin: 1% 15% 1%;
 }
 
-.backgroundBtnProyects{
+.backgroundBtnProyects {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -428,7 +428,7 @@ button:hover {
     flex-wrap: wrap;
 }
 
-.moreProyects{
+.moreProyects {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -501,7 +501,7 @@ button:hover {
     flex-wrap: wrap;
 }
 
-.whatsAppData p{
+.whatsAppData p {
 
     width: 310px;
     display: flex;
@@ -519,7 +519,7 @@ button:hover {
     flex-wrap: wrap;
 }
 
-.gmailData p{
+.gmailData p {
     width: 310px;
     display: flex;
     justify-content: center;
@@ -536,7 +536,7 @@ button:hover {
     flex-wrap: wrap;
 }
 
-.linkedinData p{
+.linkedinData p {
     width: 310px;
     display: flex;
     justify-content: center;
@@ -546,12 +546,16 @@ button:hover {
     position: fixed;
     top: 900px;
     left: 50%;
+    display: flex;
     transform: translateX(-50%);
     background-color: #9b9999;
     color: rgb(0, 0, 0);
-    padding: 10px 10px 30px;
+    padding: 15px 10px 15px;
     border-radius: 16px;
-    box-shadow: 10px 4px 5px #6b6767;
+    box-shadow: 10px 4px 10px #6b6767;
+    align-items: center;
+    justify-content: center;
+
 }
 
 @media screen and (max-width: 1056px) {
@@ -656,9 +660,10 @@ button:hover {
     }
 
     .mensaje {
-        top: 75%;
+        top: 30%;
         left: 50%;
         width: 45%;
-        padding: 10px 10px 30px;
+        padding: 10px 10px 10px;
+        width: 200px;
     }
 }
